code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_73.wast
(assert_invalid
  (module (func $type-if-value-num-vs-void-in-dead-body
    (if (i32.const 0) (then (i32.const 1)))
  ))
  "type mismatch"
)